chore:corrected issue with body not fully visible on some devices

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #FFD52E;
+  color: #ffd52e;
   text-decoration: inherit;
 }
 a:hover {
-  color: #FFD52E;
+  color: #ffd52e;
 }
 
 .content {
@@ -41,7 +41,6 @@ body {
   overflow: auto;
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background-color: #242424;
@@ -50,7 +49,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #FFD52E;
+  color: #ffd52e;
 }
 
 button {
@@ -65,7 +64,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #FFD52E;
+  border-color: #ffd52e;
 }
 button:focus,
 button:focus-visible {
@@ -78,7 +77,7 @@ button:focus-visible {
     background-color: #242424;
   }
   a:hover {
-    color: #FFD52E;
+    color: #ffd52e;
   }
   button {
     background-color: #242424;
@@ -90,10 +89,12 @@ span {
 }
 
 @supports (-webkit-touch-callout: none) {
-  html, body {
+  html,
+  body {
     position: relative;
     height: auto !important;
     overflow-y: auto !important;
     -webkit-overflow-scrolling: touch !important;
   }
 }
+
